utils/formattingutil/testdata/TestFormatHCLFile_MultiResource_formatted.tf
resource "aws_instance" "web1" { ami = "ami-1" }
resource "aws_instance" "web2" { ami = "ami-2" }
resource "aws_instance" "web3" { ami = "ami-3" }
